force-app/main/default/objects/Send_to_field_sourcing__mdt/Send_to_field_sourcing__mdt.object-meta.xml
<CustomObject>
    <description>Quote field values to work order field mapping with default values for work order if Quote fields are null.</description>
    <label>Send to field sourcing</label>
    <pluralLabel>Send to field sourcings</pluralLabel>
</CustomObject>