force-app/main/default/objects/Send_to_field_sourcing__mdt/fields/Field_Data_Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Data_Numeric_Value__c</fullName>
    <description>Specifies the default number field value for work order if the quote api name field value is blank</description>
    <label>Field Data Numeric Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>