force-app/main/default/objects/Send_to_field_sourcing__mdt/fields/Field_Data_Origin_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Data_Origin_API_Name__c</fullName>
    <description>this field will store a quote field api name to be mapped onto work order records when created via the send to field sourcing process on quotes.</description>
    <label>Field Data Origin API name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>