force-app/main/default/objects/Send_to_field_sourcing__mdt/fields/Field_Data_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Data_Text_Value__c</fullName>
    <description>this field will store a text value to be mapped onto work order records when created via the send to field sourcing process on quotes if the quote api name field is blank.</description>
    <label>Field Data Text Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>