force-app/main/default/objects/Send_to_field_sourcing__mdt/fields/Work_Order_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Field_API_Name__c</fullName>
    <description>this field will store the work order field api name that values will be mapped to when created via the send to field sourcing process on quotes based on the other field values in the metadata record.</description>
    <label>Work Order Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>